--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,12 @@
 {
  "build": {
    "env": {
-     "NODE_VERSION": "18.x"
+     "NODE_ENV": "production"
+   },
+   "cache": {
+     "paths": [
+       "node_modules"
+     ]
    }
  }
 }
