--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "build": "rsbuild build",
-    "vercel-build": "npm install --legacy-peer-deps && npm dedupe && npm run build",
+    "vercel-build": "npm ci && npm run build",
     "dev": "rsbuild dev --open",
     "db": "json-server --watch db.json --port 3002",
     "format": "prettier --write .",
@@ -36,8 +36,9 @@
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.9.1",
-    "@rsbuild/core": "1.0.1-rc.3",
+    "@rsbuild/core": "^1.0.4",
     "@rsbuild/plugin-react": "1.0.1-rc.3",
+    "@rspack/binding": "^1.0.5",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
