--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,19 +5,19 @@ name: stack-back-office
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ['main']
   pull_request:
-    branches: [ "main" ]
+    branches: ['main']
 
 concurrency:
   group: ci-${{ github.ref }}
-  cancel-in-progress: true      
+  cancel-in-progress: true
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+    runs-on:
+      ubuntu-latest
+      # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
       - uses: actions/checkout@v4
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/cache@v3
         with:
           node-version: 18
-          cache: "npm"
+          cache: 'npm'
           path: node_modules
           key: ${{ runner.os }}-node_modules-${{ hashFiles('package-lock.json') }}
           restore-keys: |
@@ -34,4 +34,4 @@ jobs:
       - run: npm run format
       - run: npm run test
       - run: npm run test:cov
-      - run: npm run build   
+      - run: npm run build
