--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,11 @@
     "env": {
       "NODE_VERSION": "18.x"
     }
-  }
+  },
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 }
